mariadb-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: default
spec:
  serviceName: "mariadb"
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.6.4-focal
        command: ['mysqld', '--default-authentication-plugin=mysql_native_password']
        ports:
        - containerPort: 3306
          name: mariadb
        - containerPort: 33060
          name: mariadb-extra
        volumeMounts:
        - name: mariadb-persistent-storage
          mountPath: /var/lib/mysql  # Path where MariaDB stores data
      volumes:
      - name: mariadb-persistent-storage
        persistentVolumeClaim:
          claimName: mariadb-pvc
      securityContext:
        runAsUser: 1001  
        runAsGroup: 1001
