mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: default
spec:
  ports:
    - port: 3306        
      targetPort: 3306   
      name: mariadb      
    - port: 33060        
      targetPort: 33060   
      name: mariadb-extra 
  selector:
    app: mariadb         
  clusterIP: None
